--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
+FLASK_APP=app.py
+FLASK_ENV=development
 GROQ_API_KEY=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
-WINSTON_API_KEY=DcPMFH7CFg2CqpqAy1yTRwiseuAgVyklnavgok8e37aeb7e0
+WINSTON_API_KEY=znJVUrmhdLe9584vztZUvM5fUeZpRp500rkO9S8j94883cf5
