--- a/frontend/goks-frontend/package.json
+++ b/frontend/goks-frontend/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-json-to-csv": "^1.2.0"
+    "react-json-to-csv": "^1.2.0",
+    "sass": "^1.81.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
